decompiler/tests/snapshots/test_tool__x86_64_callconv__func140.snap
---
source: decompiler/tests/test_tool.rs
expression: out
---
func140 0x4013dd+6 (file 0x13dd)
          4013dd: 48 8b 44 24 18          mov rax,[rsp+18h]
          4013e2: c3                      ret

function type: "func140" func (arg0 *void <TypeID(1v1)>,
                               arg1 *void <TypeID(1v1)>,
                               arg2 *void <TypeID(1v1)>,
                               arg3 *void <TypeID(1v1)>,
                               arg4 *void <TypeID(1v1)>,
                               arg5 small <TypeID(784v1)>,
                               arg6 small <TypeID(784v1)>) *void <TypeID(1v1)>
0 warnings.


mil program = 
program  97 instrs
                 0 r12 <- Ancestral(AncestralName("stack_bottom"))
                 1 r2 <- Ancestral(AncestralName("CF"))
                 2 r3 <- Ancestral(AncestralName("PF"))
                 3 r4 <- Ancestral(AncestralName("AF"))
                 4 r5 <- Ancestral(AncestralName("ZF"))
                 5 r6 <- Ancestral(AncestralName("SF"))
                 6 r7 <- Ancestral(AncestralName("TF"))
                 7 r8 <- Ancestral(AncestralName("IF"))
                 8 r9 <- Ancestral(AncestralName("DF"))
                 9 r10 <- Ancestral(AncestralName("OF"))
                10 r11 <- Ancestral(AncestralName("RBP"))
                11 r12 <- Ancestral(AncestralName("RSP"))
                12 r13 <- Ancestral(AncestralName("RIP"))
                13 r14 <- Ancestral(AncestralName("RDI"))
                14 r15 <- Ancestral(AncestralName("RSI"))
                15 r16 <- Ancestral(AncestralName("RAX"))
                16 r17 <- Ancestral(AncestralName("RBX"))
                17 r18 <- Ancestral(AncestralName("RCX"))
                18 r19 <- Ancestral(AncestralName("RDX"))
                19 r20 <- Ancestral(AncestralName("R8"))
                20 r21 <- Ancestral(AncestralName("R9"))
                21 r22 <- Ancestral(AncestralName("R10"))
                22 r23 <- Ancestral(AncestralName("R11"))
                23 r24 <- Ancestral(AncestralName("R12"))
                24 r25 <- Ancestral(AncestralName("R13"))
                25 r26 <- Ancestral(AncestralName("R14"))
                26 r27 <- Ancestral(AncestralName("R15"))
                27 r28 <- Ancestral(AncestralName("ZMM0"))
                28 r29 <- Ancestral(AncestralName("ZMM1"))
                29 r30 <- Ancestral(AncestralName("ZMM2"))
                30 r31 <- Ancestral(AncestralName("ZMM3"))
                31 r32 <- Ancestral(AncestralName("ZMM4"))
                32 r33 <- Ancestral(AncestralName("ZMM5"))
                33 r34 <- Ancestral(AncestralName("ZMM6"))
                34 r35 <- Ancestral(AncestralName("ZMM7"))
                35 r36 <- Ancestral(AncestralName("ZMM8"))
                36 r37 <- Ancestral(AncestralName("ZMM9"))
                37 r38 <- Ancestral(AncestralName("ZMM10"))
                38 r39 <- Ancestral(AncestralName("ZMM11"))
                39 r40 <- Ancestral(AncestralName("ZMM12"))
                40 r41 <- Ancestral(AncestralName("ZMM13"))
                41 r42 <- Ancestral(AncestralName("ZMM14"))
                42 r43 <- Ancestral(AncestralName("ZMM15"))
                43 r45 <- Undefined
                44 r46 <- Undefined
                45 r47 <- Undefined
                46 r48 <- Undefined
                47 r49 <- Undefined
                48 r50 <- Undefined
                49 r51 <- Undefined
                50 r52 <- Undefined
                51 r53 <- Undefined
                52 r54 <- Undefined
                53 r55 <- Undefined
                54 r56 <- Undefined
                55 r57 <- Undefined
                56 r58 <- Undefined
                57 r59 <- Undefined
                58 r60 <- Undefined
                59 r61 <- Undefined
                60 r62 <- Undefined
                61 r63 <- Undefined
                62 r64 <- Undefined
                63 r65 <- Undefined
                64 r45 <- Ancestral(AncestralName("arg0"))
                65 r14 <- Get(r45)
                66 r46 <- Ancestral(AncestralName("arg1"))
                67 r15 <- Get(r46)
                68 r47 <- Ancestral(AncestralName("arg2"))
                69 r19 <- Get(r47)
                70 r48 <- Ancestral(AncestralName("arg3"))
                71 r18 <- Get(r48)
                72 r49 <- Ancestral(AncestralName("arg4"))
                73 r20 <- Get(r49)
                74 r50 <- Ancestral(AncestralName("arg5"))
                75 r52 <- Part { src: r50, offset: 0, size: 8 }
                76 r51 <- ArithK(Add, r12, 8)
                77 r51 <- StoreMem { addr: r51, value: r52 }
                78 r52 <- Part { src: r50, offset: 8, size: 8 }
                79 r51 <- ArithK(Add, r12, 16)
                80 r51 <- StoreMem { addr: r51, value: r52 }
                81 r53 <- Ancestral(AncestralName("arg6"))
                82 r55 <- Part { src: r53, offset: 0, size: 8 }
                83 r54 <- ArithK(Add, r12, 24)
                84 r54 <- StoreMem { addr: r54, value: r55 }
                85 r55 <- Part { src: r53, offset: 8, size: 8 }
                86 r54 <- ArithK(Add, r12, 32)
                87 r54 <- StoreMem { addr: r54, value: r55 }
0x4013dd:
                88 r46 <- Const { value: 24, size: 8 }
                89 r46 <- Arith(Add, r46, r12)
                90 r45 <- LoadMem { addr: r46, size: 8 }
                91 r16 <- Get(r45)
0x4013e2:
                92 r45 <- Void
                93 r45 <- Concat { lo: r45, hi: r16 }
                94 r45 <- Part { src: r45, offset: 0, size: 8 }
                95 r47 <- SetReturnValue(r45)
                96 r47 <- Control(Ret)


ssa pre-xform:
ssa program  97 instrs
.B0:    ;;  → Always(Return).
  (  5)  r11 <- Ancestral(AncestralName("RSP"))
  (  2)  r74 <- Ancestral(AncestralName("arg5"))
         r75 <- Part { src: r74, offset: 0, size: 8 }
         r76 <- ArithK(Add, r11, 8)
         r77 <- StoreMem { addr: r76, value: r75 }
         r78 <- Part { src: r74, offset: 8, size: 8 }
         r79 <- ArithK(Add, r11, 16)
         r80 <- StoreMem { addr: r79, value: r78 }
  (  2)  r81 <- Ancestral(AncestralName("arg6"))
         r82 <- Part { src: r81, offset: 0, size: 8 }
         r83 <- ArithK(Add, r11, 24)
         r84 <- StoreMem { addr: r83, value: r82 }
         r85 <- Part { src: r81, offset: 8, size: 8 }
         r86 <- ArithK(Add, r11, 32)
         r87 <- StoreMem { addr: r86, value: r85 }
         r88 <- Const { value: 24, size: 8 }
         r89 <- Arith(Add, r88, r11)
         r90 <- LoadMem { addr: r89, size: 8 }
         r93 <- Concat { lo: r92, hi: r90 }
         r94 <- Part { src: r93, offset: 0, size: 8 }
         r95 <- SetReturnValue(r94)


cfg:
  entry: BlockID(0)
  BlockID(0) -> Always(Return) [r11, r74, r75, r76, r77, r78, r79, r80, r81, r82, r83, r84, r85, r86, r87, r88, r89, r90, r92, r93, r94, r95]
  domtree:
    BlockID(0)

ssa post-xform:
ssa program  102 instrs
.B0:    ;;  → Always(Return).
  (  4)  r11 <- Ancestral(AncestralName("RSP"))
  (  2)  r74 <- Ancestral(AncestralName("arg5"))
         r75 <- Part { src: r74, offset: 0, size: 8 }
         r76 <- ArithK(Add, r11, 8)
         r77 <- StoreMem { addr: r76, value: r75 }
         r78 <- Part { src: r74, offset: 8, size: 8 }
         r79 <- ArithK(Add, r11, 16)
         r80 <- StoreMem { addr: r79, value: r78 }
  (  3)  r81 <- Ancestral(AncestralName("arg6"))
         r82 <- Part { src: r81, offset: 0, size: 8 }
         r83 <- ArithK(Add, r11, 24)
         r84 <- StoreMem { addr: r83, value: r82 }
         r85 <- Part { src: r81, offset: 8, size: 8 }
         r86 <- ArithK(Add, r11, 32)
         r87 <- StoreMem { addr: r86, value: r85 }
         r98 <- Part { src: r81, offset: 0, size: 8 }
         r95 <- SetReturnValue(r98)



T0: {
  [pre:RSP + 8]:* := pre:arg5[8 .. 0];
  [pre:RSP + 16]:* := pre:arg5[16 .. 8];
  [pre:RSP + 24]:* := pre:arg6[8 .. 0];
  [pre:RSP + 32]:* := pre:arg6[16 .. 8];
  ;
  return pre:arg6[8 .. 0]
}
