decompiler/tests/snapshots/test_tool__x86_64_callconv__func145.snap
---
source: decompiler/tests/test_tool.rs
expression: out
---
 --- mil
program  76 instrs
    0 r12: UnknownUnsized <- Ancestral(AncestralName("stack_bottom"))
    1 r2: UnknownUnsized <- Ancestral(AncestralName("CF"))
    2 r3: UnknownUnsized <- Ancestral(AncestralName("PF"))
    3 r4: UnknownUnsized <- Ancestral(AncestralName("AF"))
    4 r5: UnknownUnsized <- Ancestral(AncestralName("ZF"))
    5 r6: UnknownUnsized <- Ancestral(AncestralName("SF"))
    6 r7: UnknownUnsized <- Ancestral(AncestralName("TF"))
    7 r8: UnknownUnsized <- Ancestral(AncestralName("IF"))
    8 r9: UnknownUnsized <- Ancestral(AncestralName("DF"))
    9 r10: UnknownUnsized <- Ancestral(AncestralName("OF"))
   10 r11: UnknownUnsized <- Ancestral(AncestralName("RBP"))
   11 r12: UnknownUnsized <- Ancestral(AncestralName("RSP"))
   12 r13: UnknownUnsized <- Ancestral(AncestralName("RIP"))
   13 r14: UnknownUnsized <- Ancestral(AncestralName("RDI"))
   14 r15: UnknownUnsized <- Ancestral(AncestralName("RSI"))
   15 r16: UnknownUnsized <- Ancestral(AncestralName("RAX"))
   16 r17: UnknownUnsized <- Ancestral(AncestralName("RBX"))
   17 r18: UnknownUnsized <- Ancestral(AncestralName("RCX"))
   18 r19: UnknownUnsized <- Ancestral(AncestralName("RDX"))
   19 r20: UnknownUnsized <- Ancestral(AncestralName("R8"))
   20 r21: UnknownUnsized <- Ancestral(AncestralName("R9"))
   21 r22: UnknownUnsized <- Ancestral(AncestralName("R10"))
   22 r23: UnknownUnsized <- Ancestral(AncestralName("R11"))
   23 r24: UnknownUnsized <- Ancestral(AncestralName("R12"))
   24 r25: UnknownUnsized <- Ancestral(AncestralName("R13"))
   25 r26: UnknownUnsized <- Ancestral(AncestralName("R14"))
   26 r27: UnknownUnsized <- Ancestral(AncestralName("R15"))
   27 r28: UnknownUnsized <- Ancestral(AncestralName("ZMM0"))
   28 r29: UnknownUnsized <- Ancestral(AncestralName("ZMM1"))
   29 r30: UnknownUnsized <- Ancestral(AncestralName("ZMM2"))
   30 r31: UnknownUnsized <- Ancestral(AncestralName("ZMM3"))
   31 r32: UnknownUnsized <- Ancestral(AncestralName("ZMM4"))
   32 r33: UnknownUnsized <- Ancestral(AncestralName("ZMM5"))
   33 r34: UnknownUnsized <- Ancestral(AncestralName("ZMM6"))
   34 r35: UnknownUnsized <- Ancestral(AncestralName("ZMM7"))
   35 r36: UnknownUnsized <- Ancestral(AncestralName("ZMM8"))
   36 r37: UnknownUnsized <- Ancestral(AncestralName("ZMM9"))
   37 r38: UnknownUnsized <- Ancestral(AncestralName("ZMM10"))
   38 r39: UnknownUnsized <- Ancestral(AncestralName("ZMM11"))
   39 r40: UnknownUnsized <- Ancestral(AncestralName("ZMM12"))
   40 r41: UnknownUnsized <- Ancestral(AncestralName("ZMM13"))
   41 r42: UnknownUnsized <- Ancestral(AncestralName("ZMM14"))
   42 r43: UnknownUnsized <- Ancestral(AncestralName("ZMM15"))
   43 r45: UnknownUnsized <- Ancestral(AncestralName("arg0"))
   44 r15: UnknownUnsized <- Get(r45)
   45 r46: UnknownUnsized <- Ancestral(AncestralName("arg1"))
   46 r19: UnknownUnsized <- Get(r46)
   47 r47: UnknownUnsized <- Ancestral(AncestralName("arg2"))
   48 r18: UnknownUnsized <- Get(r47)
   49 r48: UnknownUnsized <- Ancestral(AncestralName("arg3"))
   50 r20: UnknownUnsized <- Get(r48)
   51 r49: UnknownUnsized <- Ancestral(AncestralName("arg4"))
   52 r21: UnknownUnsized <- Get(r49)
   53 r50: UnknownUnsized <- Ancestral(AncestralName("arg5"))
   54 r52: UnknownUnsized <- Part { src: r50, offset: 0, size: 8 }
   55 r51: UnknownUnsized <- ArithK(Add, r12, 8)
   56 r51: UnknownUnsized <- StoreMem { addr: r51, value: r52 }
   57 r52: UnknownUnsized <- Part { src: r50, offset: 8, size: 8 }
   58 r51: UnknownUnsized <- ArithK(Add, r12, 16)
   59 r51: UnknownUnsized <- StoreMem { addr: r51, value: r52 }
   60 r53: UnknownUnsized <- Ancestral(AncestralName("arg6"))
   61 r54: UnknownUnsized <- Part { src: r53, offset: 0, size: 8 }
   62 r55: UnknownUnsized <- Part { src: r28, offset: 8, size: 56 }
   63 r28: UnknownUnsized <- Concat { lo: r54, hi: r55 }
   64 r56: UnknownUnsized <- Part { src: r53, offset: 8, size: 8 }
   65 r57: UnknownUnsized <- Part { src: r29, offset: 8, size: 56 }
   66 r29: UnknownUnsized <- Concat { lo: r56, hi: r57 }
0x4013f1:
   67 r46: UnknownUnsized <- Part { src: r29, offset: 0, size: 16 }
   68 r47: UnknownUnsized <- Part { src: r28, offset: 16, size: 48 }
   69 r28: UnknownUnsized <- Concat { lo: r46, hi: r47 }
0x4013f4:
   70 r45: UnknownUnsized <- Void
   71 r46: UnknownUnsized <- Part { src: r28, offset: 0, size: 8 }
   72 r45: UnknownUnsized <- Concat { lo: r45, hi: r46 }
   73 r45: UnknownUnsized <- Part { src: r45, offset: 0, size: 8 }
   74 r47: UnknownUnsized <- SetReturnValue(r45)
   75 r47: UnknownUnsized <- Control(Ret)


 --- ssa pre-xform
ssa program  76 instrs
.B0:    ;;  → Always(Return).
  (  2)  r11: unknown <UnknownUnsized> <- Ancestral(AncestralName("RSP"))
         r27: unknown <UnknownUnsized> <- Ancestral(AncestralName("ZMM0"))
         r28: unknown <UnknownUnsized> <- Ancestral(AncestralName("ZMM1"))
  (  2)  r53: unknown <UnknownUnsized> <- Ancestral(AncestralName("arg5"))
         r54: unknown <UnknownUnsized> <- Part { src: r53, offset: 0, size: 8 }
         r55: unknown <UnknownUnsized> <- ArithK(Add, r11, 8)
         r56: unknown <UnknownUnsized> <- StoreMem { addr: r55, value: r54 }
         r57: unknown <UnknownUnsized> <- Part { src: r53, offset: 8, size: 8 }
         r58: unknown <UnknownUnsized> <- ArithK(Add, r11, 16)
         r59: unknown <UnknownUnsized> <- StoreMem { addr: r58, value: r57 }
  (  2)  r60: unknown <UnknownUnsized> <- Ancestral(AncestralName("arg6"))
         r61: unknown <UnknownUnsized> <- Part { src: r60, offset: 0, size: 8 }
         r62: unknown <UnknownUnsized> <- Part { src: r27, offset: 8, size: 56 }
         r63: unknown <UnknownUnsized> <- Concat { lo: r61, hi: r62 }
         r64: unknown <UnknownUnsized> <- Part { src: r60, offset: 8, size: 8 }
         r65: unknown <UnknownUnsized> <- Part { src: r28, offset: 8, size: 56 }
         r66: unknown <UnknownUnsized> <- Concat { lo: r64, hi: r65 }
         r67: unknown <UnknownUnsized> <- Part { src: r66, offset: 0, size: 16 }
         r68: unknown <UnknownUnsized> <- Part { src: r63, offset: 16, size: 48 }
         r69: unknown <UnknownUnsized> <- Concat { lo: r67, hi: r68 }
         r71: unknown <UnknownUnsized> <- Part { src: r69, offset: 0, size: 8 }
         r72: unknown <UnknownUnsized> <- Concat { lo: r70, hi: r71 }
         r73: unknown <UnknownUnsized> <- Part { src: r72, offset: 0, size: 8 }
         r74: unknown <UnknownUnsized> <- SetReturnValue(r73)


 --- cfg
  entry: BlockID(0)
  BlockID(0) -> Always(Return) [r11, r53, r54, r55, r56, r57, r58, r59, r60, r73, r74]
  domtree:
    BlockID(0)

 --- ssa
ssa program  76 instrs
.B0:    ;;  → Always(Return).
  (  2)  r11: unknown <UnknownUnsized> <- Ancestral(AncestralName("RSP"))
  (  2)  r53: unknown <UnknownUnsized> <- Ancestral(AncestralName("arg5"))
         r54: unknown <UnknownUnsized> <- Part { src: r53, offset: 0, size: 8 }
         r55: unknown <UnknownUnsized> <- ArithK(Add, r11, 8)
         r56: unknown <UnknownUnsized> <- StoreMem { addr: r55, value: r54 }
         r57: unknown <UnknownUnsized> <- Part { src: r53, offset: 8, size: 8 }
         r58: unknown <UnknownUnsized> <- ArithK(Add, r11, 16)
         r59: unknown <UnknownUnsized> <- StoreMem { addr: r58, value: r57 }
         r60: unknown <UnknownUnsized> <- Ancestral(AncestralName("arg6"))
         r73: unknown <UnknownUnsized> <- Part { src: r60, offset: 8, size: 8 }
         r74: unknown <UnknownUnsized> <- SetReturnValue(r73)


 --- ast

T0: {
  [pre:RSP + 8]:* := pre:arg5[8 .. 0];
  [pre:RSP + 16]:* := pre:arg5[16 .. 8];
  ;
  return pre:arg6[16 .. 8]
}
